[gd_scene load_steps=5 format=2]

[ext_resource path="res://arena/mat/bricks/brick_4.png" type="Texture" id=1]
[ext_resource path="res://arena/bricks/Bouncer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 19, 19 )

[node name="Bouncer" type="StaticBody2D" groups=["bouncers", "level_items"]]
position = Vector2( 1241, 455 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="ForceField" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 7 )

[node name="KontroleTajm" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ForceField" to="." method="_on_ForceField_body_entered"]
[connection signal="body_exited" from="ForceField" to="." method="_on_ForceField_body_exited"]
[connection signal="timeout" from="KontroleTajm" to="." method="_on_KontroleTajm_timeout"]
